test/test_examples/syntactic_examples/syntax_error/error_statement_04.zig
// Syntax error: missing semicolon after variable definition

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    const x = 10 / 5
}